nodes/narukins/guestroot/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Fri Jan 16 18:42:16 2015
*nat
:PREROUTING ACCEPT [432:28800]
:POSTROUTING ACCEPT [61:3770]
:OUTPUT ACCEPT [61:3770]
-A POSTROUTING -s 172.16.0.0/24 -o eth0.201 -j MASQUERADE 
COMMIT
# Completed on Fri Jan 16 18:42:16 2015
# Generated by iptables-save v1.4.7 on Fri Jan 16 18:42:16 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [301:22152]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -i brmng -o eth0.201 -s 172.16.0.0/24 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri Jan 16 18:42:16 2015
